--- a/analysis/relative_training_load/development.ipynb
+++ b/analysis/relative_training_load/development.ipynb
@@ -24,14 +24,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "21a67892",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'src.help_functions' has no attribute 'safe_convert'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[30], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m col \u001b[38;5;129;01min\u001b[39;00m training_data\u001b[38;5;241m.\u001b[39mcolumns:\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m----> 8\u001b[0m         training_data[col] \u001b[38;5;241m=\u001b[39m training_data[col]\u001b[38;5;241m.\u001b[39mapply(\u001b[43mhf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msafe_convert\u001b[49m)\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m:\n\u001b[0;32m     10\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m \n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'src.help_functions' has no attribute 'safe_convert'"
+     ]
+    }
+   ],
    "source": [
     "# Import and quick check data\n",
     "googleDrive_client = gspread.authorize(config.DRIVE_CREDENTIALS)\n",
-    "training_data, _ = hf.import_google_sheet(googleDrive_client=googleDrive_client, filename=config.DRIVE_TP_LOG_FILENAMES[0], sheet_index=0)"
+    "training_data, _ = hf.import_google_sheet(googleDrive_client=googleDrive_client, filename=config.DRIVE_TP_LOG_FILENAMES[0], sheet_index=0)\n",
+    "\n",
+    "# \"Clean\" data\n",
+    "for col in training_data.columns:\n",
+    "    try:\n",
+    "        training_data[col] = training_data[col].apply(hf.safe_convert_to_numeric)\n",
+    "    except ValueError:\n",
+    "        pass "
    ]
   },
   {
