--- a/analysis/relative_training_load/development.ipynb
+++ b/analysis/relative_training_load/development.ipynb
@@ -300,14 +300,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 308,
    "id": "256cab3a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define parameters\n",
-    "baseline_window_days = 90\n",
-    "recent_window_days = 14"
+    "baseline_window = 90\n",
+    "recent_window = 14"
    ]
   },
   {
@@ -539,6 +539,103 @@
     "    - Baseline: $TL > q_{90,t}=Q_{0.90}(\\mathcal{L}_t)$\n",
     "    - Recent: $TL > r_{90,t}=Q_{0.90}(\\mathcal{R}_t)$\n",
     "\n",
+    "Having defined these buckets, we summarize each bucket by the average training load within, and thus make the metric sensitive to shifts in the typical intensity of each type of session within the bucket.\n",
+    "\n",
+    "**Baseline bucket averages:**\n",
+    "- Easy: $\\mu_{1,t} = \\mathbb{E}[\\,TL \\mid TL \\in \\mathcal{L}_t,\\; TL \\le q_{70,t}\\,]$\n",
+    "- Hard: $\\mu_{2,t} = \\mathbb{E}[\\,TL \\mid TL \\in \\mathcal{L}_t,\\; q_{70,t} < TL \\le q_{90,t}\\,]$\n",
+    "- Long: $\\mu_{3,t} = \\mathbb{E}[\\,TL \\mid TL \\in \\mathcal{L}_t,\\; TL > q_{90,t}\\,]$\n",
+    "\n",
+    "**Recent bucket averages:**\n",
+    "- Easy: $\\nu_{1,t} = \\mathbb{E}[\\,TL \\mid TL \\in \\mathcal{R}_t,\\; TL \\le r_{70,t}\\,]$\n",
+    "- Hard: $\\nu_{2,t} = \\mathbb{E}[\\,TL \\mid TL \\in \\mathcal{R}_t,\\; r_{70,t} < TL \\le r_{90,t}\\,]$\n",
+    "- Long: $\\nu_{3,t} = \\mathbb{E}[\\,TL \\mid TL \\in \\mathcal{R}_t,\\; TL > r_{90,t}\\,]$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 329,
+   "id": "11d5d633",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages within each bucket for baseline rolling windows\n",
+    "\n",
+    "rtl_data[\"baseline_b1_TL_mean\"] = (\n",
+    "    rtl_data\n",
+    "    [\"Training load\"]\n",
+    "    .rolling(window=baseline_window, min_periods=baseline_window)\n",
+    "    .apply(lambda x: x[x <= x.quantile(0.7)].mean(), raw=False)\n",
+    "    .mask(lambda s: s.index >= s.index[-recent_window])\n",
+    ")\n",
+    "\n",
+    "rtl_data[\"baseline_b2_TL_mean\"] = (\n",
+    "    rtl_data\n",
+    "    [\"Training load\"]\n",
+    "    .rolling(window=baseline_window, min_periods=baseline_window)\n",
+    "    .apply(lambda x: x[(x > x.quantile(0.7)) & (x <= x.quantile(0.9))].mean(), raw=False)\n",
+    "    .mask(lambda s: s.index >= s.index[-recent_window])\n",
+    ")\n",
+    "\n",
+    "rtl_data[\"baseline_b3_TL_mean\"] = (\n",
+    "    rtl_data\n",
+    "    [\"Training load\"]\n",
+    "    .rolling(window=baseline_window, min_periods=baseline_window)\n",
+    "    .apply(lambda x: x[x > x.quantile(0.9)].mean(), raw=False)\n",
+    "    .mask(lambda s: s.index >= s.index[-recent_window])\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "id": "c887b54c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages within each bucket for baseline rolling windows\n",
+    "\n",
+    "rtl_data[\"recent_b1_TL_mean\"] = (\n",
+    "    rtl_data\n",
+    "    [\"Training load\"]\n",
+    "    .iloc[baseline_window:] \n",
+    "    .rolling(window=recent_window, min_periods=recent_window)\n",
+    "    .apply(lambda x: x[x <= x.quantile(0.7)].mean(), raw=False)\n",
+    ")\n",
+    "\n",
+    "rtl_data[\"recent_b2_TL_mean\"] = (\n",
+    "    rtl_data\n",
+    "    [\"Training load\"]\n",
+    "    .iloc[baseline_window:] \n",
+    "    .rolling(window=recent_window, min_periods=recent_window)\n",
+    "    .apply(lambda x: x[(x > x.quantile(0.7)) & (x <= x.quantile(0.9))].mean(), raw=False)\n",
+    ")\n",
+    "\n",
+    "rtl_data[\"recent_b3_TL_mean\"] = (\n",
+    "    rtl_data\n",
+    "    [\"Training load\"]\n",
+    "    .iloc[baseline_window:] \n",
+    "    .rolling(window=recent_window, min_periods=recent_window)\n",
+    "    .apply(lambda x: x[x > x.quantile(0.9)].mean(), raw=False)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40337556",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Incremental calculation ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38c99fd5",
+   "metadata": {},
+   "source": [
+    "\n",
     "This division allows us to track recent load in a stratified way\n",
     "- We can measure how the recent 2-week load compares to baseline separately for each bin.\n",
     "- We can observe which type of sessions are driving increases or spikes — e.g., the easy sessions creeping up, or a cluster of recent long runs exceeding what the athlete has previously handled.\n",
@@ -546,12 +643,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "e552644f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Additionaly - option for furhter analysis, but we will talk more about this in some of next blogs: Once we have the bucket averages (for baseline or recent), we can use them to understand the structure and periodicity of the training program: Are the magnitudes of differences between buckets big enough, indicating the training distribution is appropriately stratified? Small differences could signal that the athlete is not creating meaningful variations in intensity or duration, which may limit adaptation."
+   ]
   },
   {
    "cell_type": "markdown",
