--- a/analysis/relative_training_load/development.ipynb
+++ b/analysis/relative_training_load/development.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4887de81",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dc29ef2d",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
       "Daily data about:\n",
       "-----------------------------------------------------\n",
       "Todays date: 2025-09-12\n",
-      "Date range: 2024-04-15 to 2025-09-11\n",
+      "Date range: 2024-09-13 to 2025-09-11\n",
       "Duplicated rows = 0\n",
       "Missing dates = []\n"
      ]
@@ -135,7 +135,7 @@
    "source": [
     "# Import and quick check Daily data\n",
     "googleDrive_client = gspread.authorize(config.DRIVE_CREDENTIALS)\n",
-    "daily_data, _ = hf.import_google_sheet(googleDrive_client=googleDrive_client, filename=config.DRIVE_TP_LOG_FILENAMES[1], sheet_name=\"Raw Daily Data\")\n",
+    "daily_data, _ = hf.import_google_sheet(googleDrive_client=googleDrive_client, filename=config.DRIVE_DAILY_LOG_FILENAMES[0], sheet_name=\"Raw Daily Data\")\n",
     "\n",
     "# \"Clean\" data\n",
     "daily_data = hf.data_safe_convert_to_numeric(daily_data)\n",
@@ -1567,7 +1567,7 @@
          "type": "float"
         }
        ],
-       "ref": "608d8b4c-6210-4ab1-8e02-083c0a1d7147",
+       "ref": "1d4a377b-e508-4611-8378-77f377ab4b71",
        "rows": [
         [
          "0",
