HASR-TL columns order fix

--- a/analysis/history_aware_relative_stratified_training_load/development.ipynb
+++ b/analysis/history_aware_relative_stratified_training_load/development.ipynb
@@ -173,20 +173,9 @@
     "\n",
     "We have two goals:\n",
     "\n",
-    "1. **Recent Adjusted Relative Training Load (ARTL)**\n",
-    "\n",
-    "Define a simple metric that shows where we are with our current training compared to what we've been doing in the recent past. The purpose is to see if we should reduce out trainings load — so that we don't overreach or risk injury, or increase increase it to match what what our body has been adapted to in recent past. Or just simple define where in the training cycle we are if we take larger picture into account. *How are we positined relative to recent training load overall?*\n",
-    "\n",
     "2. **Recent Load Relative Percentile (RLRP)**\n",
     "\n",
-    "Quantify how hard today's training was compared to what we are used to. In other words, show where this session fall within the distribution of our recent sessions — is it an average day, a light day, or a clear spike? This also helps guide tomorrow’s (or few next days) training choice, since we know whether today was relatively light, normal, or heavy.\n",
-    "\n",
-    "Dataset:\n",
-    "\n",
-    "- All activities, regardless if it was real training or not (including hiking, swimming, easy cycling etc.).\n",
-    "- Lets assume we only have one \"real\" workout per day and take total (sum) daily training load (one sample is one day). \n",
-    "\n",
-    "Let $TL_i$ be the training load of the day i."
+    "Quantify how hard today's training was compared to what we are used to. In other words, show where this session fall within the distribution of our recent sessions — is it an average day, a light day, or a clear spike? This also helps guide tomorrow’s (or few next days) training choice, since we know whether today was relatively light, normal, or heavy."
    ]
   },
   {
@@ -285,40 +274,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "85ebd593",
-   "metadata": {},
-   "source": [
-    "### Idea\n",
-    "\n",
-    "When training for endurance sports, our bodies adapt over time, and whether a workout is \"hard\" or \"easy\" on the body, depends on what we’ve been doing recently and historically. To capture this, we define a **history-aware measure of current relative load**, which compares the recent training patterin to what the athlete's body has successfully adapted to over a longer baseline period.\n",
-    "\n",
-    "We can think of this in two complementary components:\n",
-    "\n",
-    "- Baseline (long term) adaptation - Load the body has been succesfully adapted to over a longer period, assuming this distribution is \"safe\", disregarding recent acute load.\n",
-    "    - Denoted as $TL_{\\text{baseline},t}$.\n",
-    "    - Computed over a long baseline window of $N$ days, excluding last $n$ days: $\\mathcal{L}_t=\\{TL_{t-(n+j)}\\mid j=1,\\dots, N\\}$ \n",
-    "    - To give more importance to recent training within the baseline period, we assign weights decreasing with days: $w_j = \\lambda^{j-1}, \\quad 0 < \\lambda <= 1, \\quad j = 1, ..., N$, where more recent baseline days contribute more to defining the baseline load.\n",
-    "\n",
-    "- Recent training pattern - Load the body is currently being exposed to, capturing acute training load.\n",
-    "    - Denotes $TL_{\\text{recent},t}$.\n",
-    "    - Computed over a recent window of $n$ days: $\\mathcal{R}_t=\\{TL_{t-j}\\mid j=1,\\dots,n\\}$.\n",
-    "    - This can also be weighted to emphasize the most recent sessions: $v_j = \\lambda^{j-1}, \\quad 0 < \\lambda <= 1, \\quad j = 1, ..., n$\n",
-    "\n",
-    "We define the parameters as:\n",
-    "- Baseline window: N = 90 days\n",
-    "- Recent window: n = 14 days\n",
-    "- Weight base $\\lambda$ = $(0.5)^\\frac{1}{31} = 0.978$, so weight halves approximately every 31 days.\n",
-    "\n",
-    "Additionaly: Because we aim to capture relative load patterns rather than total accumulated load, we normalize the weights so that they sum to 1. This ensures that the weighted, for example averages, for baseline and recent windows are directly comparable: \n",
-    "\n",
-    "- $\\overline{w}_j = \\frac{w_j}{\\sum_{k=1}^{N}w_k} \\quad j = 1, ..., N$\n",
-    "- $\\overline{v}_j = \\frac{v_j}{\\sum_{k=1}^{v}w_k} \\quad j = 1, ..., v$\n",
-    "\n",
-    "Note: By keeping the baseline and recent windows non-overlapping, we ensure that the baseline reflects only training the body has already adapted to, without being influenced by recent sessions that the body has not yet adjusted to. This allows us to identify increases in stress in the recent window that may pose a risk."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "256cab3a",
@@ -399,14 +354,7 @@
    "id": "4c3594f8",
    "metadata": {},
    "source": [
-    "### Percentile stratified metric\n",
-    "\n",
-    "In endurance sports, training days (including races) can be grouped into a few main types:\n",
-    "- **Easy & medium long sessions** - used for recovery, aerobic base, and technique work. These make up roughly 70% of all sessions.\n",
-    "- **Hard sessions** - tempo, threshold, VO2max, or interval workouts. Typically around 20% of sessions.\n",
-    "- **Long days** - the occasional very long run, bike ride, or race that forms the extreme right tail of the distribution. About 10% of sessions.\n",
-    "- **Other** - longer bike days, longer hikes, multiple activities in one day etc.\n",
-    "- **Rest days** - no training at all."
+    "### Percentile stratified metric"
    ]
   },
   {
@@ -602,46 +550,14 @@
    "id": "56420bb0",
    "metadata": {},
    "source": [
-    "To create a history-aware measure of current relative load, we have to take into account all of three types of sessions—easy, hard, and long, as they all contribute to our overall training load and adaptation, each in their own way. \n",
-    "- Even though **easy and medium-long** sessions are individually low-stress, small increases in duration, intensity, or frequency can gradually accumulate, potentially pushing the body beyond its adapted baseline. They also form the foundation for recovery and adaptation from harder sessions, so they should not be too long, too intense, or too rare, ensuring that we can perform well in harder workouts.\n",
-    "- **Hard sessions** are important for performance improvement but carry higher risk of fatigue and overreaching. By tracking them separately, we can see if recent hard sessions exceed what the body is adapted to, indicating higher acute load. They should also make up a reasonable portion of total sessions to allow sufficient recovery.\n",
-    "- **Long days** are infrequent but highly taxing. Monitoring their frequency and intensity relative to baseline ensures they are not too frequent or extreme, reducing risk of excessive fatigue or injury.\n",
     "\n",
-    "We will divide all sessions into these three categories based on Training Load values. using percentiles to define the thresholds. This approach is individualized, automatic, and reproducible. The baseline rolling window is used to set the thresholds, which are then applied to both baseline and recent data.\n",
-    "- This ensures the baseline distribution reflects training the body has already adapted to, providing a safe reference.\n",
-    "- Recent sessions are evaluated relative to this safe baseline, so any increase in intensity, frequency, or duration signals higher acute load or potential risk.\n",
-    "- For example, \"easy\" sessions in the recent window cannot appear deceptively low simply because the recent training overall is harder than baseline.\n",
     "\n",
-    "Formally, let $\\mathcal{Q}^w_p(\\mathcal{L}_t)$ be weighted $p$-th quantile of the baseline window $\\mathcal{L}_t$ using weights $w_j$ and\n",
     "\n",
-    "We define the baseline and recent buckets using baseline percentiles $q^w_{70,t}$ and $q^w_{90,t}$ as follows:\n",
-    "- **Easy sessions**: Training loads falling below the weighted $q_{low}$ percentile of the window - $TL \\leq q^w_{low,t}=Q^w_{low}(\\mathcal{L}_t)$ \n",
-    "- **Hard sessions**: Training loads between the weighted $q_{low}$ and $q_{high}$ percentiles - $q^w_{70,t} < $ TL $\\leq q^w_{high,t}=Q^w_{high}(\\mathcal{L}_t)$\n",
-    "- **Long days**: Training loads above the weighted 90th percentile - $TL > q^w_{high,t}=Q^w_{high}(\\mathcal{L}_t)$\n",
     "\n",
-    "**Note on weighted percentiles**: The weighted percentile represents the TL at which the cumulative sum of weights reaches the desired fraction of total weight. This accounts for the fact that more recent baseline sessions contribute more to the threshold.\n",
     "\n",
-    "Having defined these buckets, we summarize each bucket by the weighted average training load within, where we allow more recent training days to contribute more to the bucket averages. With this, we make the metric sensitive to shifts in the typical intensity of each type of session within the bucket. \n",
     "\n",
-    "Let $w_j$ be the weight of day $j$ in the baseline window $\\mathcal{L}_t$ and $v_j$ be the weight of day $j$ in the recent window $\\mathcal{R}_t$. We then define the weighted averages within each bucket as:\n",
     "\n",
-    "**Baseline bucket weighted averages:**\n",
-    "- Easy: $\\mu^w_{1,t} = \\mathbb{E}_w[\\,TL \\mid TL \\in \\mathcal{L}_t,\\; TL \\le q^w_{low,t}\\,]$\n",
-    "- Hard: $\\mu^w_{2,t} = \\mathbb{E}_w[\\,TL \\mid TL \\in \\mathcal{L}_t,\\; q^w_{low,t} < TL \\le q^w_{high,t}\\,]$\n",
-    "- Long: $\\mu^w_{3,t} = \\mathbb{E}_w[\\,TL \\mid TL \\in \\mathcal{L}_t,\\; TL > q^w_{high,t}\\,]$\n",
-    "\n",
-    "**Recent bucket weighted averages:**\n",
-    "- Easy: $\\nu^w_{1,t} = \\mathbb{E}_w[\\,TL \\mid TL \\in \\mathcal{R}_t,\\; TL \\le q^w_{low,t}\\,]$\n",
-    "- Hard: $\\nu^w_{2,t} = \\mathbb{E}_w[\\,TL \\mid TL \\in \\mathcal{R}_t,\\; q^w_{low,t} < TL \\le q^w_{high,t}\\,]$\n",
-    "- Long: $\\nu^w_{3,t} = \\mathbb{E}_w[\\,TL \\mid TL \\in \\mathcal{R}_t,\\; TL > q^w_{high,t}\\,]$\n",
-    "\n",
-    "Where $\\mathbb{E}[\\cdot]$ denotes the empirical weighted mean $\\mathbb{E}_w[v] = \\frac{\\sum_{i=1}^nw_iv_i}{\\sum_{i=1}^nw_i}$ over the subset of training load values falling into the specified bucket.\n",
-    "\n",
-    "In addition to the weighted averages, we can also track the proportion of sessions falling into each bucket in both the baseline and the recent window, as the number of easy, hard, and long sessions is not fixed once baseline thresholds are applied to recent training. For example, if the proportion of easy days decreases in recent window  may signal insufficient recovery. Formally, let:\n",
-    "\n",
-    "$\\pi_{k,t}^{(b)}$ and $\\pi_{k,t}^{(r)}$ \n",
-    "\n",
-    "denote proportions of sessions in bucket $k = 1,2,3$ in baseline and recent window respectively."
+    "\n"
    ]
   },
   {
