--- a/history_aware_relative_stratified_training_load/analysis.ipynb
+++ b/history_aware_relative_stratified_training_load/analysis.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "af20002e",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
     "        (tt_classification_data[\"training_type_description\"].isnull())\n",
     "    )\n",
     "    | (\n",
-    "        tt_classification_data[\"Description\"].str.contains(\"Biking\", case=False, na=False) & \n",
+    "        tt_classification_data[\"Description\"].str.contains(\"Biking|Cycling\", case=False, na=False) & \n",
     "        ~tt_classification_data[\"Description\"].str.contains(r\"\\|\", case=False, na=False) & \n",
     "        (tt_classification_data[\"training_type_description\"].isnull())\n",
     "    )\n",
@@ -193,7 +193,7 @@
     "# Long days (No special description, duration >= 2h)\n",
     "long_mask = (\n",
     "    (tt_classification_data[\"Duration [h]\"] >= 2.0)  &\n",
-    "    (tt_classification_data[\"Description\"].str.contains(\"Race|Running|Dolgi|Tek|x|Dolgi\", case=False, na=False)) & \n",
+    "    (tt_classification_data[\"Description\"].str.contains(\"Race|Running|Dolgi|Tek|x\", case=False, na=False)) & \n",
     "    (tt_classification_data[\"training_type_description\"].isnull())\n",
     ")\n",
     "tt_classification_data.loc[long_mask, \"training_type_description\"] = \"Long\"\n",
